--- a/example.html
+++ b/example.html
@@ -16,7 +16,7 @@
     <div id="info"></div>
     <script src="router.js"></script>
     <script>
-    rounter({
+    router({
         '': function() {
             this['/home']();
         },
