--- a/example.html
+++ b/example.html
@@ -31,7 +31,7 @@
                 page: 1
             });
         },
-        '/list/p:page?': function(args) {
+        '/list/p:page': function(args) {
             info.innerHTML = 'list/' + args.page
         },
         '/login/:username(/:password)': function(args) {
